--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.15",
         "league/flysystem-ftp": "^3.0",
-        "nesbot/carbon": "^2.67"
+        "nesbot/carbon": "^2.67",
+        "twilio/sdk": "^7.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
